Backport PR #13249: Fix illegible white on yellow text of stacktrace in dark theme (#13313)

--- a/packages/theme-dark-extension/style/theme.css
+++ b/packages/theme-dark-extension/style/theme.css
@@ -15,3 +15,10 @@ pre {
   font-size: var(--jp-code-font-size);
   line-height: var(--jp-code-line-height);
 }
+
+/* fix illegible yellow backround in exception stacktrace */
+:where(.jp-RenderedText[data-mime-type='application/vnd.jupyter.stderr']
+    pre
+    .ansi-yellow-bg) {
+  color: black;
+}
